# QT

./: .gitignore  QT 5.15 CROSS COMPILATION FOR RASPBERRY.docx  README.md  ~$ 5.15 CROSS COMPILATION FOR RASPBERRY.docx
Android/First_App/: First_App.pro  main.qml
Android/notification/: NotificationClient.java  notificationClientQT.cpp
C++ Applications/CSV_Simple_Application/: CSV_Simple_Application.pro  main.cpp
C++ Applications/CSV_file_numbers/: CSV_file_numbers.pro  main.cpp
C++ Applications/QThreading/: mythread.cpp  mythread.h
C++ Applications/copyApplication/: main.cpp
C++ Applications/run_commands/: main.cpp
C++ Applications/tree_diagram/: README.txt  main.cpp  tree.cpp
PROJECT - OEEDashboard/OEEDashboard/: ContactModel.qml  database.cpp  database.h  graph_rectangle.qml  grid_rect_properties.h  input_values.qml  list_rectangle.qml  main.cpp  main.qml  mainproperties.cpp  mainproperties.h  oee_database.db  qml.qrc  qml_screen_properties.h  settings.qml  start_page.qml
QML/: OEEDashboardoee_database.db
QML Applications/BrightnessControlAppLinux/: BrightnessControlAppLinux.pro  brightnessmanager.cpp  brightnessmanager.hpp  main.cpp  main.qml  qml.qrc  setBrightness.sh
QML Applications/BrightnessControlApp_WinAPI/: BrightnessControlApp_WinAPI.pro  brightnessScript.ps1  displaymanager.cpp  displaymanager.hpp  main.cpp  main.qml
QML Applications/CSV_Writer/: CSV_Writer.pro  csvwriter.cpp  csvwriter.hpp  main.cpp  main.qml
QML Applications/CameraApplication/: CameraApplication.pro  cameraproperties.h  icameracontext.cpp  icameracontext.h  main.cpp  main.qml
QML Applications/DBPhotoGallery/: camera.qml  database.cpp  database.h  gallery.qml  gallerymodel.cpp  gallerymodel.h  homePage.qml  main.cpp  qml.qrc
QML Applications/GolfCartAndroid/: home.qml  main.qml  otpScreen.qml  qml.qrc
QML Applications/GoogleSpeechRecognition/: GoogleSpeechRecognition.pro  speechtotext.cpp
QML Applications/LibraryManagement/: admin_page.qml  database.cpp  home_page.qml  issuedbooksmodel.h  librarian_page.qml  loginproperties.h  main.qml  other_page.qml  pendingbooksmodel.cpp  pendingbooksmodel.h  qml.qrc  studentsmodel.h
QML Applications/LocalPhotoGallery/: Gallery.qml  HomePage.qml  LocalPhotoGallery.pro  loginproperties.h  photosmodel.cpp  photosmodel.h
QML Applications/MQTT_Demo/: mqttclient.cpp
QML Applications/MapApplication/: MapApplication.pro  MapMarker.qml  MapRoutes.qml  Minimap.qml  assetitem.hpp  assetlistmodel.cpp  assetlistmodel.hpp  database.hpp  insertBasePath.sql  libs.qrc  location.cpp  location.hpp  locationlistmodel.cpp  locationlistmodel.hpp  locationmodel.cpp  locationmodel.hpp  main.cpp  main.qml  navPathPolyLine.qml  navbackend.cpp  navbackendjson.cpp  nodemodel.hpp  paths.json  qml.qrc
QML Applications/MultiLanguageApp/: MyTranslator.h  main.qml  qml.qrc
QML Applications/MultithreadedApp/: main.qml
QML Applications/OpenGL_Image_Processing/: OpenGL_Image_Processing.pro  camera.qml  imageprocessor.cpp  main.cpp  qml.qrc
QML Applications/PhotoGallery/: PhotoGallery.pro  database.cpp  gallery.qml  gallerymodel.cpp  gallerymodel.h
QML Applications/QtAndroidWavAudio/: QtAndroidWavAudio.pro  audiomanager.cpp  main.qml
QML Applications/SpeechRecognitionPocketSphinix/: SpeechRecognitionPocketSphinix.pro  main.cpp  main.qml
QML/AnchorLayout/: main.qml
QML_Applications/CSV_Writer/: CMakeLists.txt
QML_Applications/GraphChangeColourforLineSeries/: Bolts.qml  CMakeLists.txt  datagenerator.cpp  datagenerator.h  main.cpp  main.qml
QML_Applications/LiveDateTimeChart/: CMakeLists.txt  main.cpp  main.qml
QML_Applications/ModifiedCombobox/: CMakeLists.txt  main.cpp  main.qml  myclass.cpp  myclass.h  mydata.cpp  mydata.h
(+677 files in other folders)
